--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mongoose Flights</title>
+  <title><%= title %></title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   <link rel='stylesheet' href='/stylesheets/style.css' />
 
@@ -17,4 +17,5 @@
     |
     <a href="/flights/">All Flights</a>
   </nav>
-  
+
+  <h1><%= title %></h1>
