--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -39,7 +39,7 @@
         </select>
     
     <label>Arrives:</label>
-    <input type="datetime-local" name="arrives"  value="">
+    <input type="datetime-local" name="arrival"  value="">
 
     <input type="submit" value="Add Destination">
 
@@ -56,14 +56,18 @@
     </thead>
     
     <tbody>
-            <tr>
-                <!-- <td><%= flight.airline %></td> -->
-                <td><%= flight.airport %></td>
-                <td><%= flight.departs %></td>
-
-            </tr>
+        <% if (flight.destinations.length) { %>
+            <% flight.destinations.forEach(function(d) { %>
+                <tr>
+                    <td><%= d.airport %></td>
+                    <td><%= d.arrival %></td>
+                </tr>
+        <% }); %> 
     </tbody>
-    
+            
+                <% } else { %>
+                    <h5>No Recorded Destinations</h5>            
+                <% } %>
 </table>
 
 <%- include('../partials/footer') %>
